tests/extensions/forLoops/valid/forSkip.wacc
# Executes the loop 10 times skipping each time.

# Output:
#

begin
	for (int i = 0; i < 7; i = i + 1) do
		skip
	done
end